# makeit

./: Cargo.toml  README.md
makeit/: Cargo.toml
makeit-derive/: Cargo.toml
makeit-derive/src/: lib.rs
makeit/examples/: invalid1.rs  invalid2.rs  valid.rs
makeit/src/: lib.rs  main.rs
